--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "server": "nodemon index.js",
-    "test": "cross-env DB_ENV=testing jest --verbose --watch"
+    "test": "cross-env DB_ENV=testing jest --verbose --watch",
+    "coverage": "cross-env DB_ENV=testing jest --verbose --coverage"
   },
   "repository": {
     "type": "git",
